test/conformance/chainsaw/policy-validation/cluster-policy/success/policy-1-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: vault-init-injector
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
