test/conformance/chainsaw/policy-validation/cluster-policy/success/01-policies.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: policies
spec:
  try:
  - apply:
      file: policy-1.yaml
  - assert:
      file: policy-1-assert.yaml
