test/conformance/chainsaw/policy-validation/cluster-policy/success/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: success
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: vault-init-injector
